# kts

./: .gitignore  Cargo.toml  LICENSE  README  index.html
.meteor/: packages  versions
client/: Navigation.jsx  Race.jsx  Results.jsx  Routes.jsx  ScoreForm.jsx  Stage.jsx  index.jsx
client/proforma/: main.html  main.jsx
common/: Collections.js  scoring.js
public/: demo.yaml  khana_regs.html
server/: startup.js
src/: khana_rule.rs  lib.rs  main.rs  page.rs
src/page/: event.rs  home.rs  khana_rule.rs  stage.rs
styles/: kts.scss
